# watchable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.rustme/: config.ron  docs.md  header.md
coverage/: index.html
coverage/examples/: index.html  simple-async.rs.html  simple.rs.html
coverage/src/: index.html  lib.rs.html
examples/: simple-async.rs  simple.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/error/: trait.Error.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
main/implementors/core/ops/drop/: trait.Drop.js
main/implementors/futures_core/stream/: trait.Stream.js
main/implementors/std/error/: trait.Error.js
main/src/watchable/: lib.rs.html
main/trait.impl/core/clone/: trait.Clone.js
main/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
main/trait.impl/core/default/: trait.Default.js
main/trait.impl/core/error/: trait.Error.js
main/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
main/trait.impl/core/marker/: trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/trait.impl/futures_core/stream/: trait.Stream.js
main/watchable/: all.html  enum.TimeoutError.html  index.html  sidebar-items.js  struct.Disconnected.html  struct.Sentinel.html  struct.SentinelStream.html  struct.Watchable.html  struct.WatchableReadGuard.html  struct.WatchableWriteGuard.html  struct.Watcher.html  struct.WatcherStream.html
src/: .crate-docs.md  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+9 files in other folders)
