[package]
name = "watchable"
version = "0.1.0"
edition = "2021"

[dependencies]
event-listener = "2.5.2"
parking_lot = "0.12.0"
futures-util = "0.3.21"

[dev-dependencies]
tokio = { version = "1.16.1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }

[workspace]
members = ["xtask"]
